--- a/lab4/lab4.css
+++ b/lab4/lab4.css
@@ -1,89 +1,1 @@
-body {
-    background: rgb(250,250,250);
-    background: linear-gradient(90deg, rgba(250,250,250,1) 30%, rgba(160,160,164,1) 79%);
-    font-family: Noto Sans, sans-serif;
-    font-size: 12px;
-    color: #000000;
-    margin: 0px;
-    padding: 0px;
-}
-
-h1 {
-    font-size: 18px;
-    font-weight: bold;
-    color: #000000;
-    margin: 10px;
-    padding: 0px;
-}
-
-h3 {
-    font-size: 14px;
-    font-weight: bold;
-    color: #000000;
-    margin: 0px;
-    padding: 0px;
-}
-
-table {
-    border: 1px solid #000000;
-    border-collapse: collapse;
-    width: 100%;
-    padding: 5px;
-}
-
-table th {
-    font-size: 12px;
-    font-weight: bold;
-    color: #ffffff;
-    background-color: #000000;
-    border: 1px solid #000000;
-    padding: 2px;
-    text-align: center;
-}
-
-table td {
-    font-size: 12px;
-    font-weight: normal;
-    color: #000000;
-    background-color: #ffffff;
-    border: 1px solid #000000;
-    padding: 2px;
-    text-align: center;
-}
-
-button {
-    font-size: 12px;
-    font-weight: bold;
-    color: #ffffff;
-    background-color: #000000;
-    border: 1px solid #000000;
-    padding: 2px;
-    margin-top: 5px;
-    border-radius: 5px;
-}
-
-button:hover {
-    background-color: #ffffff;
-    color: #000000;
-    cursor: pointer;
-}
-
-section {
-    margin: 10px;
-    padding: 10px;
-    background-color: none;
-    border: 1px solid #000000;
-}
-
-footer {
-    margin: 10px;
-    padding: 10px;
-    background-color: none;
-    border: 1px solid #000000;
-}
-
-ul {
-    margin: 10px;
-    padding: 0;
-    overflow: hidden;
-}
+body,h3{margin:0;padding:0}table td,table th{text-align:center}button,table th{font-weight:700;color:#fff;background-color:#000}button:hover,table td{background-color:#fff;color:#000}body,h1,h3,table td{color:#000}h1,ul{margin:10px}body,h1,h3,ul{padding:0}body{background:#fafafa;background:linear-gradient(90deg,#fafafa 30%,#a0a0a4 79%);font-family:Noto Sans,sans-serif;font-size:12px}h1{font-size:18px;font-weight:700}h3{font-size:14px;font-weight:700}button,table td,table th{font-size:12px;border:1px solid #000;padding:2px}table{border:1px solid #000;border-collapse:collapse;width:100%;padding:5px}table td{font-weight:400}button{margin-top:5px;border-radius:5px}button:hover{cursor:pointer}footer,section{margin:10px;padding:10px;background-color:none;border:1px solid #000}ul{overflow:hidden}
