--- a/lab5/lab5.css
+++ b/lab5/lab5.css
@@ -1,1 +1,1 @@
-body,ul{margin:0}p,ul{padding:10px}body{box-sizing:border-box;font-family:"Noto Sans",sans-serif;background-color:#010f1e}h1,h2,h3,h4{font-family:"Fjalla One",sans-serif}ul{list-style-type:none;overflow:hidden}
+body,ul{margin:0}p,ul{padding:10px}body{box-sizing:border-box;font-family:"Noto Sans",sans-serif;background-color:#010f1e}h1,h2,h3,h4{font-family:"Fjalla One",sans-serif}ul{list-style-type:none;overflow:hidden}.justify-text{text-align:justify}
