--- a/lab6/lab6.css
+++ b/lab6/lab6.css
@@ -1,63 +1,23 @@
-* {
+*, 
+*:before
+*:after {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
-  }
-  
-  body {
-    font-family: Arial, sans-serif;
-    background-color: #f2f2f2;
-  }
-  
-  .container {
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-  }
-  
-  h1 {
-    text-align: center;
-  }
-  
-  form {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .form-control {
-    margin: 10px 0;
-  }
-  
-  label {
-    font-weight: bold;
-  }
-  
-  input[type="password"] {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 16px;
-  }
-  
-  button[type="submit"] {
-    background-color: #4caf50;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    padding: 10px;
-    font-size: 16px;
-    cursor: pointer;
-  }
-  
-  button[type="submit"]:hover {
-    background-color: #3e8e41;
-  }
-  
-  #message {
-    margin-top: 10px;
-    font-weight: bold;
-    text-align: center;
-  }
-  
+}
+body {
+  height: 100vh;
+  background: linear-gradient(45deg, #8b51ff, #7a37ff);
+}
+
+form {
+  background-color: #ffffff;
+  width: 450px;
+  padding: 50px 40px;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  border-radius: 8px;
+  box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.15);
+}
