--- a/lab6/lab6.css
+++ b/lab6/lab6.css
@@ -7,7 +7,7 @@
     font-family: "Poppins",sans-serif;
 }
 body{
-    height: 100vh;
+    height: 120vh;
     background: rgb(34,193,195);
     background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
 }
@@ -54,7 +54,7 @@ input[type="button"]{
 p{
     font-size: 14px;
     margin-top: 15px;
-    color: #ffffff;
+    color: #000000;
 }
 .bold {
   font-weight: bold;
