--- a/lab6/lab6.css
+++ b/lab6/lab6.css
@@ -1,64 +1,1 @@
-*,
-*:before,
-*:after{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: "Poppins",sans-serif;
-}
-body{
-    height: 120vh;
-    background: rgb(34,193,195);
-    background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
-}
-h1 {
-  color: black;
-}
-form{
-    background-color: #ffffff;
-    width: 450px;
-    padding: 50px 40px;
-    border-radius: 8px;
-    margin: auto;
-    box-shadow: 20px 20px 30px rgba(0,0,0,0.15);
-}
-label{
-    font-weight: 500;
-    color: #101030;
-}
-input{
-    display: block;
-    width: 100%;
-    margin-top: 5px;
-    padding: 12px;
-    border-radius: 5px;
-    outline: none;
-    color: #101010;
-}
-#password{
-    margin-bottom: 30px;
-}
-input[type="password"]{
-    border: 2px solid #c2c2c2;
-}
-input[type="button"]{
-    background-color: #fdbb2d;
-    border: none;
-    color: #101010;
-    font-weight: 500;
-    font-size: 18px;
-    letter-spacing: 1px;
-    cursor: pointer;
-    margin-top: 20px;
-}
-p{
-    font-size: 14px;
-    margin-top: 15px;
-    color: #000000;
-}
-.bold {
-  font-weight: bold;
-}
-.italic {
-  font-style: italic;
-}
+*,:after,:before{padding:0;margin:0;box-sizing:border-box;font-family:Poppins,sans-serif}body{height:170vh;background:#22c1c3;background:linear-gradient(0deg,#22c1c3 0,#fdbb2d 100%)}form{background-color:#fff;width:450px;padding:50px 40px;border-radius:8px;margin:auto;box-shadow:20px 20px 30px rgba(0,0,0,.15)}label{font-weight:500;color:#101030}input{display:block;width:100%;margin-top:5px;padding:12px;border-radius:5px;outline:0;color:#101010}#password{margin-bottom:30px}input[type=password]{border:2px solid #c2c2c2}input[type=button]{background-color:#fdbb2d;border:none;color:#101010;font-weight:500;font-size:18px;letter-spacing:1px;cursor:pointer;margin-top:20px}p{font-size:14px;margin-top:15px;color:#000}.bold{font-weight:700}.italic{font-style:italic}.justify{text-align:justify}
