Upload complete lab12

--- a/lab12/views/index.html
+++ b/lab12/views/index.html
@@ -36,13 +36,8 @@
     <header>
       <nav class="navbar navbar-light nav-back">
         <div class="container-fluid">
-          <a href="/" class="navbar-brand">
-          <img
-            src="https://www.pngmart.com/files/11/Technology-PNG-Free-Download.png"
-            alt="Logo de tecnológico de Monterrey"
-            height="100"
-            width="175"
-            />
+          <a style="color: white;" href="/lista" class="navbar-brand">
+            ¡Clickea para ver perros!
           </a>
         </div>
       </nav>
@@ -67,11 +62,16 @@
       <div class="container mt-5 mb-5 d-flex">
         <img src="https://i.pinimg.com/736x/c2/81/6c/c2816c7efac6973a3ef401852f99bcfd.jpg" alt="" height="350" width="" class="me-5" />
         <p class="justify-text">
-          <a href="/about">About us</a> ipsum dolor sit amet, consectetur adipisicing elit. 
-          Ad iure, adipisci accusantium nesciunt magnam, ab rem iste 
-          dolorum distinctio minima nemo saepe aut cupiditate, cumque 
-          omnis dicta ipsum voluptates! Sapiente?
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+          <a href="/about" type="button">About us</a> 
+          <br><strong>¿Qué otros templating engines existen para node?</strong>
+          <br>Existen muchos, pero los más populares son:
+          <br>1. EJS
+          <br>2. Pug
+          <br>3. Handlebars
+          <br>4. Nunjucks
+          <br>5. Mustache
+          <br>6. EJS, entre otros.
+          <br><br>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
           Ad quod quo recusandae quos odit laborum delectus nobis doloremque deserunt, 
           sunt at autem quae unde voluptas. Accusamus maiores est nam consequuntur.
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
