Some curious changes

--- a/lab17/views/lista.ejs
+++ b/lab17/views/lista.ejs
@@ -81,7 +81,7 @@
               </div>
               <div class="media-content">
                 <p class="title is-4"><%= machine.nombre %></p>
-                <p class="subtitle is-6"><%= machine.handle %></p>
+                <p class="subtitle is-6"><%= machine.marca %></p>
               </div>
             </div>
 
