--- a/lab17/views/nuevo.ejs
+++ b/lab17/views/nuevo.ejs
@@ -83,13 +83,13 @@
         placeholder="Descripcion"
       />
       <br /><br />
-      <label for="handle">Handle:</label>
+      <label for="marca">Marca:</label>
       <input
-        name="handle"
-        id="handle"
+        name="marca"
+        id="marca"
         class="input is-rounded"
         type="text"
-        placeholder="Handle"
+        placeholder="Marca"
       />
       <br /><br />
       <input
