--- a/lab26/views/index.ejs
+++ b/lab26/views/index.ejs
@@ -1,57 +1,31 @@
 <%- include('includes/head.ejs') %>
-<!-- :::::El encabezado::::: -->
 <header>
-  <!-- :::::La línea de búsqueda::::: -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="/">
         <img src="/assets/logos/CYM.png" alt="" width="" height="70" />
       </a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarNavDropdown"
-        aria-controls="navbarNavDropdown"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/index"
-              >Inicio</a
-            >
+            <a class="nav-link active" aria-current="page" href="/index">Inicio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/historia">Historia</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="laboratorio.html"
-              >Laboratorio de Calibración</a
-            >
+            <a class="nav-link" href="/laboratorio">Laboratorio de Calibración</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="servicios.html">Nuestros Servicios</a>
+            <a class="nav-link" href="/servicios">Nuestros Servicios</a>
+          </li class="nav-item">
+            <a class="nav-link" href="/lista">Ver productos</a>
           </li>
-          <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="navbarDropdownMenuLink"
-              role="button"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >
-              Productos
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <li>
-                <a class="dropdown-item" href="/lista">Añadir producto</a>
-              </li>
-            </ul>
+          </li class="nav-item">
+            <a class="nav-link" href="/apis">Ver Apis</a>
           </li>
         </ul>
         <% if(isLoggedIn) { %>
@@ -61,10 +35,7 @@
       </div>
     </div>
   </nav>
-  <!-- :::::El texto en la imagen::::: -->
-  <div
-    class="cover d-flex justify-content-center align-items-center flex-column"
-  >
+  <div class="cover d-flex justify-content-center align-items-center flex-column">
     <h1>Control y Medición</h1>
 
     <p>El mejor laboratorio de calibración de la ciudad</p>
@@ -72,19 +43,14 @@
   </div>
 </header>
 
-<!-- :::::Todas las tarjetitas::::: -->
 <section>
   <div class="container mt-5 mb-5">
     <div class="row justify-content-center">
       <div class="col-12 col-sm-6 col-md-4 col-lg-3 mt-2">
         <div class="card">
-          <div
-            title="Hombre y mujer trabajando con un durómetro"
-            class="cover cover-small"
-            style="
+          <div title="Hombre y mujer trabajando con un durómetro" class="cover cover-small" style="
               background-image: url(https://cdn.glitch.global/d96074ef-9e8a-42d0-913a-07c8a0d6a723/IMG_1240.JPG?v=1651872272449);
-            "
-          ></div>
+            "></div>
           <div class="card-body">
             <h5 class="card-title">EXAMPLE</h5>
             <p class="card-text">EXAMPLE</p>
@@ -94,12 +60,9 @@
 
       <div class="col-12 col-sm-6 col-md-4 col-lg-3 mt-2">
         <div class="card">
-          <div
-            class="cover cover-small"
-            style="
+          <div class="cover cover-small" style="
               background-image: url(https://cdn.glitch.global/d96074ef-9e8a-42d0-913a-07c8a0d6a723/IMG_1240.JPG?v=1651872272449);
-            "
-          ></div>
+            "></div>
           <div class="card-body">
             <h5 class="card-title">EXAMPLE</h5>
             <p class="card-text">EXAMPLE</p>
@@ -109,12 +72,9 @@
 
       <div class="col-12 col-sm-6 col-md-4 col-lg-3 mt-2">
         <div class="card">
-          <div
-            class="cover cover-small"
-            style="
+          <div class="cover cover-small" style="
               background-image: url(https://cdn.glitch.global/d96074ef-9e8a-42d0-913a-07c8a0d6a723/IMG_1240.JPG?v=1651872272449);
-            "
-          ></div>
+            "></div>
           <div class="card-body">
             <h5 class="card-title">EXAMPLE</h5>
             <p class="card-text">EXAMPLE</p>
@@ -125,7 +85,6 @@
   </div>
 </section>
 
-<!-- :::::Primer párrafo::::: -->
 <section>
   <div class="container mt-5 mb-5">
     <h3>¿Por qué Grupo Control y Medición?</h3>
@@ -142,15 +101,11 @@
   </div>
 </section>
 
-<!-- :::::Contacto::::: -->
 <section>
   <div class="container mt-5 mb-5">
     <div class="row">
       <div class="col-12 col-sm-6 col-lg-5">
-        <img
-          src="https://cdn.glitch.global/d96074ef-9e8a-42d0-913a-07c8a0d6a723/SelfieDoodle.svg?v=1651961131261"
-          alt="Una persona ilustrada saludando a su teléfono"
-        />
+        <img src="https://cdn.glitch.global/d96074ef-9e8a-42d0-913a-07c8a0d6a723/SelfieDoodle.svg?v=1651961131261" alt="Una persona ilustrada saludando a su teléfono" />
       </div>
 
       <div class="col-12 col-sm-6">
@@ -177,141 +132,70 @@
   </div>
 </section>
 
-<!-- :::::Video-1::::: -->
 <section>
   <div class="container mt-5 mb-5" id="video-1">
     <h3>¡Conócenos!</h3>
     <div class="responsive-iframe">
-      <iframe
-        width="560"
-        height="315"
-        src="https://www.youtube.com/embed/TxEQkG23LbU?"
-        title="YouTube video player"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen
-      ></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/TxEQkG23LbU?" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
   </div>
 </section>
 
-<!-- :::::Carrusel de marcas::::: -->
 <section>
   <div class="container mt-5 mb-5">
     <h3 class="d-flex justify-content-center">
       <u>CONOCE NUESTRAS MARCAS PREMIUM</u>
     </h3>
-    <div
-      id="carouselExampleControls"
-      class="carousel slide"
-      data-bs-ride="carousel"
-    >
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img
-            src="https://cdn.glitch.global/d96074ef-9e8a-42d0-913a-07c8a0d6a723/KB.jpg?v=1652453785185"
-            class="d-block w-100"
-            alt="..."
-          />
+          <img src="https://cdn.glitch.global/d96074ef-9e8a-42d0-913a-07c8a0d6a723/KB.jpg?v=1652453785185" class="d-block w-100" alt="..." />
         </div>
         <div class="carousel-item">
-          <img
-            src="https://cdn.glitch.global/d96074ef-9e8a-42d0-913a-07c8a0d6a723/MICROTECH.jpg?v=1652453785911"
-            class="d-block w-100"
-            alt="..."
-          />
+          <img src="https://cdn.glitch.global/d96074ef-9e8a-42d0-913a-07c8a0d6a723/MICROTECH.jpg?v=1652453785911" class="d-block w-100" alt="..." />
         </div>
         <div class="carousel-item">
-          <img
-            src="https://cdn.glitch.global/d96074ef-9e8a-42d0-913a-07c8a0d6a723/BAREISS.jpg?v=1652453784686"
-            class="d-block w-100"
-            alt="..."
-          />
+          <img src="https://cdn.glitch.global/d96074ef-9e8a-42d0-913a-07c8a0d6a723/BAREISS.jpg?v=1652453784686" class="d-block w-100" alt="..." />
         </div>
         <div class="carousel-item">
-          <img
-            src="https://cdn.glitch.global/d96074ef-9e8a-42d0-913a-07c8a0d6a723/IDECO.jpg?v=1652453785002"
-            class="d-block w-100"
-            alt="..."
-          />
+          <img src="https://cdn.glitch.global/d96074ef-9e8a-42d0-913a-07c8a0d6a723/IDECO.jpg?v=1652453785002" class="d-block w-100" alt="..." />
         </div>
         <div class="carousel-item">
-          <img
-            src="https://cdn.glitch.global/d96074ef-9e8a-42d0-913a-07c8a0d6a723/ERNST.jpg?v=1652453784749"
-            class="d-block w-100"
-            alt="..."
-          />
+          <img src="https://cdn.glitch.global/d96074ef-9e8a-42d0-913a-07c8a0d6a723/ERNST.jpg?v=1652453784749" class="d-block w-100" alt="..." />
         </div>
         <div class="carousel-item">
-          <img
-            src="https://cdn.glitch.global/d96074ef-9e8a-42d0-913a-07c8a0d6a723/REMET.jpg?v=1652453786325"
-            class="d-block w-100"
-            alt="..."
-          />
+          <img src="https://cdn.glitch.global/d96074ef-9e8a-42d0-913a-07c8a0d6a723/REMET.jpg?v=1652453786325" class="d-block w-100" alt="..." />
         </div>
         <div class="carousel-item">
-          <img
-            src="https://cdn.glitch.global/d96074ef-9e8a-42d0-913a-07c8a0d6a723/METAL_POWER.jpg?v=1652453785604"
-            class="d-block w-100"
-            alt="..."
-          />
+          <img src="https://cdn.glitch.global/d96074ef-9e8a-42d0-913a-07c8a0d6a723/METAL_POWER.jpg?v=1652453785604" class="d-block w-100" alt="..." />
         </div>
         <div class="carousel-item">
-          <img
-            src="https://cdn.glitch.global/d96074ef-9e8a-42d0-913a-07c8a0d6a723/ELEKTRO_PHYSIK.jpg?v=1652453784809"
-            class="d-block w-100"
-            alt="..."
-          />
+          <img src="https://cdn.glitch.global/d96074ef-9e8a-42d0-913a-07c8a0d6a723/ELEKTRO_PHYSIK.jpg?v=1652453784809" class="d-block w-100" alt="..." />
         </div>
         <div class="carousel-item">
-          <img
-            src="https://cdn.glitch.global/d96074ef-9e8a-42d0-913a-07c8a0d6a723/BAQ.jpg?v=1652453784541"
-            class="d-block w-100"
-            alt="..."
-          />
+          <img src="https://cdn.glitch.global/d96074ef-9e8a-42d0-913a-07c8a0d6a723/BAQ.jpg?v=1652453784541" class="d-block w-100" alt="..." />
         </div>
         <div class="carousel-item">
-          <img
-            src="https://cdn.glitch.global/d96074ef-9e8a-42d0-913a-07c8a0d6a723/MICROTECNICA.jpg?v=1652453786059"
-            class="d-block w-100"
-            alt="..."
-          />
+          <img src="https://cdn.glitch.global/d96074ef-9e8a-42d0-913a-07c8a0d6a723/MICROTECNICA.jpg?v=1652453786059" class="d-block w-100" alt="..." />
         </div>
         <div class="carousel-item">
-          <img
-            src="https://cdn.glitch.global/d96074ef-9e8a-42d0-913a-07c8a0d6a723/LASER_DESIGN.jpg?v=1652453785370"
-            class="d-block w-100"
-            alt="..."
-          />
+          <img src="https://cdn.glitch.global/d96074ef-9e8a-42d0-913a-07c8a0d6a723/LASER_DESIGN.jpg?v=1652453785370" class="d-block w-100" alt="..." />
         </div>
-        <button
-          class="carousel-control-prev"
-          type="button"
-          data-bs-target="#carouselExampleControls"
-          data-bs-slide="prev"
-        >
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
         </button>
-        <button
-          class="carousel-control-next"
-          type="button"
-          data-bs-target="#carouselExampleControls"
-          data-bs-slide="next"
-        >
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
       </div>
     </div>
-    <small class="d-flex justify-content-center"
-      >DUREZA / DIMENSIONAL / METALOGRAFÍA / FUERZA / IMPACTO / TEMPERATURA /
-      HUMEDAD / TORQUE</small
-    >
+    <small class="d-flex justify-content-center">DUREZA / DIMENSIONAL / METALOGRAFÍA / FUERZA / IMPACTO / TEMPERATURA /
+      HUMEDAD / TORQUE</small>
   </div>
 </section>
 
-<!-- :::::Segundo párrafo::::: -->
 <section>
   <div class="container mt-5 mb-5">
     <p class="center-text">
@@ -322,25 +206,15 @@
   </div>
 </section>
 
-<!-- :::::Video-2::::: -->
 <section>
   <div class="container mt-5 mb-5" id="video-2">
     <h3>¡Visita nuestro showroom!</h3>
     <div class="responsive-iframe">
-      <iframe
-        width="560"
-        height="315"
-        src="https://www.youtube.com/embed/_8IeEE3C8Hw?"
-        title="YouTube video player"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen
-      ></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/_8IeEE3C8Hw?" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
   </div>
 </section>
 
-<!-- :::::Mapa::::: -->
 <section>
   <div class="container mt-5 mb-5" id="mapa">
     <h4>Aquí nos vemos:</h4>
@@ -349,19 +223,10 @@
       Qro.
     </p>
     <div class="responsive-iframe">
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d59744.5304235687!2d-100.53317624179684!3d20.627505499999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d3506f22a40001%3A0x261fdf7f6fcaee37!2sControl%20Y%20Medici%C3%B3n%20Del%20Centro%2C%20S.%20De%20R.l.%20De%20C.v.%20(Cym)!5e0!3m2!1sen!2smx!4v1652023185394!5m2!1sen!2smx"
-        width="600"
-        height="450"
-        style="border: 0"
-        allowfullscreen=""
-        loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"
-      ></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d59744.5304235687!2d-100.53317624179684!3d20.627505499999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d3506f22a40001%3A0x261fdf7f6fcaee37!2sControl%20Y%20Medici%C3%B3n%20Del%20Centro%2C%20S.%20De%20R.l.%20De%20C.v.%20(Cym)!5e0!3m2!1sen!2smx!4v1652023185394!5m2!1sen!2smx" width="600" height="450" style="border: 0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
   </div>
 
-  <!-- :::::Botón subir::::: -->
   <button class="btn-scrolltop" id="btn_scrolltop">
     <i class="fas fa-chevron-up"></i>
   </button>
@@ -381,19 +246,14 @@
   </script>
 </section>
 
-<!-- :::::Tarjetitas de socio::::: -->
 <section>
   <div class="container mt-5 mb-5">
     <div class="row justify-content-center">
       <div class="col-12 col-sm-6 col-md-4 col-lg-3 mt-2">
         <div class="card">
-          <div
-            title="Hombre y mujer trabajando con un durómetro"
-            class="cover cover-small"
-            style="
+          <div title="Hombre y mujer trabajando con un durómetro" class="cover cover-small" style="
               background-image: url(https://cdn.glitch.global/d96074ef-9e8a-42d0-913a-07c8a0d6a723/ahk.png?v=1652671806404);
-            "
-          ></div>
+            "></div>
           <div class="card-body">
             <h5 class="card-title d-flex justify-content-center">
               Socio Activo
@@ -404,12 +264,9 @@
 
       <div class="col-12 col-sm-6 col-md-4 col-lg-3 mt-2">
         <div class="card">
-          <div
-            class="cover cover-small"
-            style="
+          <div class="cover cover-small" style="
               background-image: url(https://cdn.glitch.global/d96074ef-9e8a-42d0-913a-07c8a0d6a723/atms.png?v=1652671832830);
-            "
-          ></div>
+            "></div>
           <div class="card-body">
             <h5 class="card-title d-flex justify-content-center">
               Socio Fundador
@@ -420,12 +277,9 @@
 
       <div class="col-12 col-sm-6 col-md-4 col-lg-3 mt-2">
         <div class="card">
-          <div
-            class="cover cover-small"
-            style="
+          <div class="cover cover-small" style="
               background-image: url(https://cdn.glitch.global/d96074ef-9e8a-42d0-913a-07c8a0d6a723/canacintra.png?v=1652671863031);
-            "
-          ></div>
+            "></div>
           <div class="card-body d-flex justify-content-center">
             <h5 class="card-title">Socio Activo</h5>
           </div>
