--- a/lab26/views/apis.ejs
+++ b/lab26/views/apis.ejs
@@ -1,104 +1,5 @@
 <%- include('includes/head.ejs') %>
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    background-color: #f7f7f7;
-  }
-
-  h1 {
-    text-align: center;
-    margin-top: 20px;
-  }
-
-  div {
-    margin: 20px auto;
-    width: 80%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  label {
-    font-weight: bold;
-    margin-bottom: 10px;
-  }
-
-  input[type="text"] {
-    padding: 5px;
-    font-size: 16px;
-    border: none;
-    border-radius: 5px;
-    box-shadow: 2px 2px 2px #ccc;
-    margin-bottom: 10px;
-    width: 100%;
-    max-width: 400px;
-  }
-
-  button {
-    padding: 8px;
-    background-color: #4CAF50;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-    box-shadow: 2px 2px 2px #ccc;
-    margin-bottom: 20px;
-    width: 100%;
-    max-width: 400px;
-  }
-
-  button:hover {
-    background-color: #3e8e41;
-  }
-
-  #songs {
-    margin: 20px auto;
-    width: 80%;
-    max-width: 600px;
-    list-style: none;
-    padding: 0;
-  }
-
-  #songs li {
-    padding: 10px;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    margin-bottom: 10px;
-    border-radius: 5px;
-    box-shadow: 2px 2px 2px #ccc;
-    font-size: 16px;
-  }
-
-  #songs li:last-child {
-    margin-bottom: 0;
-  }
-
-  #suggestions {
-    margin-top: 10px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-
-  #suggestions button {
-    padding: 5px 8px;
-    margin: 5px;
-    background-color: #4CAF50;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 14px;
-    box-shadow: 2px 2px 2px #ccc;
-  }
-
-  #suggestions button:hover {
-    background-color: #3e8e41;
-  }
-</style>
 <header>
-  <!-- :::::La línea de búsqueda::::: -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="/">
@@ -116,20 +17,15 @@
             <a class="nav-link" href="/historia">Historia</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="laboratorio.html">Laboratorio de Calibración</a>
+            <a class="nav-link" href="/laboratorio">Laboratorio de Calibración</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="servicios.html">Nuestros Servicios</a>
+            <a class="nav-link" href="/servicios">Nuestros Servicios</a>
+          </li class="nav-item">
+          <a class="nav-link" href="/lista">Ver productos</a>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Productos
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <li>
-                <a class="dropdown-item" href="/lista">Añadir producto</a>
-              </li>
-            </ul>
+          </li class="nav-item">
+          <a class="nav-link" href="/apis">Ver Apis</a>
           </li>
         </ul>
         <% if(isLoggedIn) { %>
@@ -139,13 +35,19 @@
       </div>
     </div>
   </nav>
+  <div class="cover d-flex justify-content-center align-items-center flex-column">
+    <h1>Control y Medición</h1>
+
+    <p>El mejor laboratorio de calibración de la ciudad</p>
+    <a class="btn btn-primary" href="/historia" role="button">Conoce más</a>
+  </div>
 </header>
 
 <section>
   <div class="container mt-5 mb-5">
     <h1>Pokemon</h1>
     <input type="text" id="pokemon-name" placeholder="Enter Pokemon name">
-    <button onclick="searchPokemon()">Search</button>
+    <button class="btn btn-secondary" onclick="searchPokemon()">Search</button>
     <div class="mt-5" id="pokemon-data"></div>
   </div>
 </section>
@@ -153,11 +55,11 @@
 <section>
   <div class="container mt-5 mb-5">
     <div>
-      <label for="search">Search for an artist:</label>
-      <input type="text" id="search" name="search" oninput="getSuggestions()">
-      <div id="suggestions"></div>
-      <button onclick="getRandomSongs()">Get 10 Random Songs</button>
+      <input type="text" id="search" name="search" class="input-group mb-3" placeholder="Search for an artist" list="suggestions" oninput="getSuggestions()">
+      <datalist id="suggestions"></datalist>
+      <button onclick="getRandomSongs()" class="btn btn-secondary">Get 10 Random Songs</button>
     </div>
+    <br>
     <ul id="songs"></ul>
   </div>
 </section>
@@ -199,13 +101,13 @@
         const suggestionsContainer = document.getElementById('suggestions');
         suggestionsContainer.innerHTML = '';
         suggestions.forEach(suggestion => {
-          const button = document.createElement('button');
-          button.textContent = suggestion;
-          button.onclick = () => document.getElementById('search').value = suggestion;
-          suggestionsContainer.appendChild(button);
+          const option = document.createElement('option');
+          option.value = suggestion;
+          suggestionsContainer.appendChild(option);
         });
       });
   }
+
 
   function getRandomSongs() {
     const apiKey = 'c252789f4f7e7057a2080aa7fb7825e9';
