--- a/lab26/views/lista.ejs
+++ b/lab26/views/lista.ejs
@@ -1,68 +1,45 @@
 <%- include('includes/head2.ejs') %>
 <header>
-  <!-- :::::La línea de búsqueda::::: -->
-  <nav class="navbar" role="navigation" aria-label="main navigation">
-    <div class="navbar-brand">
-      <a class="navbar-item" href="https://www.controlymedicion.com.mx">
-        <img src="/assets/logos/CYM.png" width="" height="70" />
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/">
+        <img src="/assets/logos/CYM.png" alt="" width="" height="70" />
       </a>
-
-      <a
-        role="button"
-        class="navbar-burger"
-        aria-label="menu"
-        aria-expanded="false"
-        data-target="navbarBasicExample"
-      >
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
-      </a>
-    </div>
-
-    <div id="navbarBasicExample" class="navbar-menu">
-      <div class="navbar-start">
-        <a class="navbar-item" href="/index"> Inicio </a>
-
-        <a class="navbar-item" href="/historia"> Historia </a>
-
-        <a class="navbar-item" href="/laboratorio">
-          Laboratorio de Calibración
-        </a>
-
-        <a class="navbar-item" href="/servicios"> Nuestros Servicios </a>
-
-        <div class="navbar-item has-dropdown is-hoverable">
-          <a class="navbar-link"> Productos </a>
-
-          <div class="navbar-dropdown">
-            <a class="navbar-item" href="/lista"> Añadir Producto </a>
-          </div>
-        </div>
-      </div>
-      <div class="navbar-end">
-        <div class="navbar-item">
-          <div class="buttons">
-            <% if(!isLoggedIn) { %>
-            <a href="/signup" class="button is-primary">
-              <strong>Sign up</strong>
-            </a>
-            <a href="/login" class="button is-light"> Log in </a>
-            <% } %> <% if(isLoggedIn) { %>
-            <span class="navbar-item">Hola <%= nombre %> | </span>
-            <a href="/logout" class="button is-danger"> Log out </a>
-            <% } %>
-          </div>
-        </div>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/index">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/historia">Historia</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/laboratorio">Laboratorio de Calibración</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/servicios">Nuestros Servicios</a>
+          </li class="nav-item">
+            <a class="nav-link" href="/lista">Ver productos</a>
+          </li>
+          </li class="nav-item">
+            <a class="nav-link" href="/apis">Ver Apis</a>
+          </li>
+        </ul>
+        <% if(isLoggedIn) { %>
+        <span class="navbar-item ms-auto">Hola <%= nombre %> | </span>
+        <a href="/logout" class="btn btn-danger btn-sm"> Log out </a>
+        <% } %>
       </div>
     </div>
   </nav>
-  <!-- :::::El texto en la imagen::::: -->
-  <div
-    class="cover d-flex justify-content-end align-items-start flex-column p-5"
-  >
+  <div class="cover d-flex justify-content-center align-items-center flex-column">
     <h1>Control y Medición</h1>
+
     <p>El mejor laboratorio de calibración de la ciudad</p>
+    <a class="btn btn-primary" href="/historia" role="button">Conoce más</a>
   </div>
 </header>
 
@@ -81,30 +58,28 @@
           <div class="card">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img
-                  src="/uploads/<%= machine.imagen %>"
-                  alt="Placeholder image"
-                />
+                <img src="/uploads/<%= machine.imagen %>" alt="Placeholder image" />
               </figure>
             </div>
             <div class="card-content">
               <div class="media">
                 <div class="media-left">
                   <figure class="image is-48x48">
-                    <img
-                      src="/uploads/<%= machine.imagen %>"
-                      alt="Placeholder image"
-                    />
+                    <img src="/uploads/<%= machine.imagen %>" alt="Placeholder image" />
                   </figure>
                 </div>
                 <div class="media-content">
                   <p class="title is-4"><%= machine.nombre %></p>
                   <p class="subtitle is-6">
-                    @<%= machine.marca %> <%= machine.tipo %>
+                    @<%= machine.marca %> <br><%= machine.tipo %>
                   </p>
+                  <div class="media-right">
+                    <p class="title is-4">
+                      Descarga flyer: <a href="/uploads/<%= machine.pdf %>" download="<%= machine.pdf %>"> <i class="fas fa-file-pdf"></i> </a>
+                    </p>
+                  </div>
                 </div>
               </div>
-
               <div class="content">
                 <%= machine.descripcion %>
               </div>
