--- a/lab26/views/nuevo.ejs
+++ b/lab26/views/nuevo.ejs
@@ -1,88 +1,54 @@
 <%- include('includes/head2.ejs') %>
 <header>
-  <!-- :::::La línea de búsqueda::::: -->
-  <nav class="navbar" role="navigation" aria-label="main navigation">
-    <div class="navbar-brand">
-      <a class="navbar-item" href="https://www.controlymedicion.com.mx">
-        <img src="/assets/logos/CYM.png" width="" height="70" />
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/">
+        <img src="/assets/logos/CYM.png" alt="" width="" height="70" />
       </a>
-
-      <a
-        role="button"
-        class="navbar-burger"
-        aria-label="menu"
-        aria-expanded="false"
-        data-target="navbarBasicExample"
-      >
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
-      </a>
-    </div>
-
-    <div id="navbarBasicExample" class="navbar-menu">
-      <div class="navbar-start">
-        <a class="navbar-item" href="/index"> Inicio </a>
-
-        <a class="navbar-item" href="/historia"> Historia </a>
-
-        <a class="navbar-item" href="/laboratorio">
-          Laboratorio de Calibración
-        </a>
-
-        <a class="navbar-item" href="/servicios"> Nuestros Servicios </a>
-
-        <div class="navbar-item has-dropdown is-hoverable">
-          <a class="navbar-link"> Productos </a>
-
-          <div class="navbar-dropdown">
-            <a class="navbar-item" href="/lista"> Añadir Producto </a>
-          </div>
-        </div>
-      </div>
-      <div class="navbar-end">
-        <div class="navbar-item">
-          <div class="buttons">
-            <% if(!isLoggedIn) { %>
-            <a href="/signup" class="button is-primary">
-              <strong>Sign up</strong>
-            </a>
-            <a href="/login" class="button is-light"> Log in </a>
-            <% } %> <% if(isLoggedIn) { %>
-            <span class="navbar-item">Hola <%= nombre %> | </span>
-            <a href="/logout" class="button is-danger"> Salir </a>
-            <% } %>
-          </div>
-        </div>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/index">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/historia">Historia</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/laboratorio">Laboratorio de Calibración</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/servicios">Nuestros Servicios</a>
+          </li class="nav-item">
+            <a class="nav-link" href="/lista">Ver productos</a>
+          </li>
+          </li class="nav-item">
+            <a class="nav-link" href="/apis">Ver Apis</a>
+          </li>
+        </ul>
+        <% if(isLoggedIn) { %>
+        <span class="navbar-item ms-auto">Hola <%= nombre %> | </span>
+        <a href="/logout" class="btn btn-danger btn-sm"> Log out </a>
+        <% } %>
       </div>
     </div>
   </nav>
-  <!-- :::::El texto en la imagen::::: -->
-  <div
-    class="cover d-flex justify-content-end align-items-start flex-column p-5"
-  >
+  <div class="cover d-flex justify-content-center align-items-center flex-column">
     <h1>Control y Medición</h1>
+
     <p>El mejor laboratorio de calibración de la ciudad</p>
+    <a class="btn btn-primary" href="/historia" role="button">Conoce más</a>
   </div>
 </header>
 <section>
   <div class="container mt-5 mb-5">
     <h1 class="title">Registrar Producto</h1>
-    <form
-      class="container mt-5 mb-5"
-      action="/nuevo"
-      method="POST"
-      enctype="multipart/form-data"
-    >
+    <form class="container mt-5 mb-5" action="/nuevo" method="POST" enctype="multipart/form-data">
       <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
       <label for="nombre">Nombre:</label>
-      <input
-        name="nombre"
-        id="nombre"
-        class="input is-rounded"
-        type="text"
-        placeholder="Nombre"
-      />
+      <input name="nombre" id="nombre" class="input is-rounded" type="text" placeholder="Nombre" />
       <br />
       <br />
       <label for="imagen">Imagen:</label>
@@ -90,37 +56,18 @@
       <br />
       <br />
       <label for="descripcion">Descripcion:</label>
-      <input
-        name="descripcion"
-        id="descripcion"
-        class="input is-rounded"
-        type="text"
-        placeholder="Descripcion"
-      />
+      <input name="descripcion" id="descripcion" class="input is-rounded" type="text" placeholder="Descripcion" />
       <br /><br />
       <label for="marca">Marca:</label>
-      <input
-        name="marca"
-        id="marca"
-        class="input is-rounded"
-        type="text"
-        placeholder="Marca"
-      />
+      <input name="marca" id="marca" class="input is-rounded" type="text" placeholder="Marca" />
       <br /><br />
       <label for="tipo">Tipo:</label>
-      <input
-        name="tipo"
-        id="tipo"
-        class="input is-rounded"
-        type="text"
-        placeholder="tipo"
-      />
+      <input name="tipo" id="tipo" class="input is-rounded" type="text" placeholder="tipo" />
       <br /><br />
-      <input
-        class="button is-link is-rounded"
-        type="submit"
-        value="Registrar"
-      />
+      <label for="pdf">PDF:</label>
+      <input name="pdf" id="pdf" class="input is-rounded" type="file" />
+      <br /><br />
+      <input class="button is-link is-rounded" type="submit" value="Registrar" />
     </form>
   </div>
 </section>
