--- a/lab26/views/apis.ejs
+++ b/lab26/views/apis.ejs
@@ -11,7 +11,7 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/index">Inicio</a>
+            <a class="nav-link" aria-current="page" href="/index">Inicio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/historia">Historia</a>
@@ -25,7 +25,7 @@
           <a class="nav-link" href="/lista">Ver productos</a>
           </li>
           </li class="nav-item">
-          <a class="nav-link" href="/apis">Ver Apis</a>
+          <a class="nav-link active" href="/apis">Ver Apis</a>
           </li>
         </ul>
         <% if(isLoggedIn) { %>
